--- a/Week_0_python/a_tutorial_strings_format.ipynb
+++ b/Week_0_python/a_tutorial_strings_format.ipynb
@@ -27,20 +27,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# A random collection of variables of different types\n",
     "a_floating_point_number = 3.6720\n",
     "an_integer = 6\n",
-    "a_string = \"I am a string\" + \"foo\"\n",
+    "a_string = \"I am a string\"\n",
     "a_string_with_symbols = \"% {} begin\\n 'end\"  # Yes, you can put ' in a \"\", or \" in a ''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
      "output_type": "stream",
      "text": [
       "3.672\n",
-      "3.672 6 I am a stringfoo\n"
+      "3.672 6 I am a string\n"
      ]
     }
    ],
@@ -713,7 +713,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
