Forcing no loop on bins problem

--- a/Homework_1_probability/probability_sampling.ipynb
+++ b/Homework_1_probability/probability_sampling.ipynb
@@ -273,7 +273,9 @@
     "# Bins \n",
     "\n",
     "This is actually a special case of the previous function - just that we don't explicitly label the bins; instead the labels are set to the value at the center of the bin. Rather than specifying unique labels for each bin,\n",
-    "just provide the start/stop boundaries and the number of divisions. Assumes all bins are equally likely"
+    "just provide the start/stop boundaries and the number of divisions. Assumes all bins are equally likely.\n",
+    "\n",
+    "Do NOT use a loop for this. You should be able to calculate the bin directly."
    ]
   },
   {
