--- a/RobotHallway/check_bayes_filter.ipynb
+++ b/RobotHallway/check_bayes_filter.ipynb
@@ -65,6 +65,37 @@
    },
    "outputs": [],
    "source": [
+    "# Syntax check of your code\n",
+    "robot_gt = RobotGroundTruth()\n",
+    "robot_gt.set_move_left_probabilities(0.3, 0.5)\n",
+    "ret_value = robot_gt.move_left(0.1)\n",
+    "if 0.49 < ret_value < 0.61:\n",
+    "    print(f\"Robot ground truth: Passed move left syntax check\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "robot_gt.reset_location()\n",
+    "robot_gt.set_move_right_probabilities(0.2, 0.1)\n",
+    "ret_value = robot_gt.move_right(0.1)\n",
+    "if 0.49 < ret_value < 0.61:\n",
+    "    print(f\"Robot ground truth: Passed move right syntax check\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
     "# Edit the code in robot_ground_truth.py (the methods tagged with Bayes assignment)\n",
     "test_discrete_move_functions()"
    ]
@@ -98,6 +129,26 @@
    "source": [
     "from world_ground_truth import WorldGroundTruth, test_world_ground_truth\n",
     "from robot_sensors import RobotSensors, test_discrete_sensors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Syntax check  \n",
+    "robot_gt = RobotGroundTruth()\n",
+    "world_gt = WorldGroundTruth()\n",
+    "robot_sensor = RobotSensors()\n",
+    "\n",
+    "probs_see_door = (0.7, 0.2)\n",
+    "robot_sensor.set_door_sensor_probabilites(probs_see_door[0], probs_see_door[1])\n",
+    "ret_value = robot_sensor.query_door(robot_gt, world_gt)\n",
+    "if ret_value is True or ret_value is False:\n",
+    "    print(\"Passed robot sensor syntax check\")"
    ]
   },
   {
@@ -143,6 +194,34 @@
    "outputs": [],
    "source": [
     "from bayes_filter import BayesFilter, test_bayes_filter_sensor_update, test_move_one_direction, test_move_update"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Syntax checks    \n",
+    "n_doors = 2\n",
+    "n_bins = 10\n",
+    "world_ground_truth = WorldGroundTruth()\n",
+    "world_ground_truth.random_door_placement(n_doors, n_bins)\n",
+    "robot_sensor = RobotSensors()\n",
+    "bayes_filter = BayesFilter()\n",
+    "robot_ground_truth = RobotGroundTruth()\n",
+    "\n",
+    "# Syntax check 1, reset probabilities\n",
+    "bayes_filter.reset_probabilities(n_bins)\n",
+    "\n",
+    "# Syntax check 2, update sensor\n",
+    "bayes_filter.update_belief_sensor_reading(world_ground_truth, robot_sensor, True)\n",
+    "\n",
+    "# Syntax check 3, move\n",
+    "bayes_filter.update_belief_move_left(robot_ground_truth)\n",
+    "bayes_filter.update_belief_move_right(robot_ground_truth)"
    ]
   },
   {
@@ -222,30 +301,6 @@
     "editable": false
    },
    "source": [
-    "---\n",
-    "\n",
-    "To double-check your work, the cell below will rerun all of the autograder tests."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "deletable": false,
-    "editable": false
-   },
-   "outputs": [],
-   "source": [
-    "grader.check_all()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": false,
-    "editable": false
-   },
-   "source": [
     "## Submission\n",
     "\n",
     "Make sure you have run all cells in your notebook in order before running the cell below, so that all images/graphs appear in the output. The cell below will generate a zip file for you to submit. **Please save before exporting!**\n",
@@ -263,7 +318,7 @@
    "outputs": [],
    "source": [
     "# Save your notebook first, then run this cell to export your submission.\n",
-    "grader.export()"
+    "grader.export(run_tests=True)"
    ]
   },
   {
@@ -290,9 +345,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   },
   "otter": {
+   "OK_FORMAT": true,
    "tests": {
     "bayes_filter": {
      "name": "bayes_filter",
@@ -378,7 +434,7 @@
       {
        "cases": [
         {
-         "code": ">>> assert(test_discrete_sensors(b_print=False))\nTrue",
+         "code": ">>> assert(test_discrete_sensors(b_print=False))\n",
          "hidden": false,
          "locked": false
         }
