--- a/RobotHallway/check_kalman_filter.ipynb
+++ b/RobotHallway/check_kalman_filter.ipynb
@@ -65,6 +65,23 @@
    },
    "outputs": [],
    "source": [
+    "# Syntax check\n",
+    "robot_gt = RobotGroundTruth()\n",
+    "robot_gt.reset_location()\n",
+    "robot_gt.set_move_continuos_probabilities(0.01)\n",
+    "ret_amt_moved = robot_gt.move_continuous(0.0)\n",
+    "if -0.1 < ret_amt_moved < 0.1:\n",
+    "    print(f\"Robot ground truth: Passed move continuous syntax check\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
     "# Edit the code in robot_ground_truth.py (the methods tagged with Kalman assignment)\n",
     "test_continuous_move_functions()"
    ]
@@ -107,6 +124,23 @@
    },
    "outputs": [],
    "source": [
+    "# Syntax check\n",
+    "robot_gt = RobotGroundTruth()\n",
+    "robot_sensor = RobotSensors()\n",
+    "robot_sensor.set_distance_wall_sensor_probabilities(sigma=0.01)\n",
+    "dist_with_noise = robot_sensor.query_distance_to_wall(robot_gt)\n",
+    "if 0.0 < dist_with_noise < 1.0:\n",
+    "    print(\"Dist wall sensor, passed syntax test\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
     "# Edit the code in robot_sensors.py (the methods tagged with Bayes assignment)\n",
     "test_continuous_sensor()"
    ]
@@ -139,6 +173,29 @@
    "outputs": [],
    "source": [
     "from kalman_filter import KalmanFilter, test_kalman_update"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Syntax checks\n",
+    "kalman_filter = KalmanFilter()\n",
+    "robot_ground_truth = RobotGroundTruth()\n",
+    "robot_sensor = RobotSensors()\n",
+    "\n",
+    "# Set mu/sigmas\n",
+    "sensor_noise = {\"mu\": 0.0, \"sigma\": 0.1}\n",
+    "move_error = {\"mu\": 0.0, \"sigma\": 0.05}\n",
+    "robot_ground_truth.set_move_continuos_probabilities(move_error[\"sigma\"])\n",
+    "robot_sensor.set_distance_wall_sensor_probabilities(sensor_noise[\"sigma\"])\n",
+    "\n",
+    "kalman_filter.update_gauss_sensor_reading(robot_sensor, 0.1)\n",
+    "kalman_filter.update_continuous_move(robot_ground_truth, 0.0)"
    ]
   },
   {
@@ -216,30 +273,6 @@
     "editable": false
    },
    "source": [
-    "---\n",
-    "\n",
-    "To double-check your work, the cell below will rerun all of the autograder tests."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "deletable": false,
-    "editable": false
-   },
-   "outputs": [],
-   "source": [
-    "grader.check_all()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": false,
-    "editable": false
-   },
-   "source": [
     "## Submission\n",
     "\n",
     "Make sure you have run all cells in your notebook in order before running the cell below, so that all images/graphs appear in the output. The cell below will generate a zip file for you to submit. **Please save before exporting!**\n",
@@ -257,7 +290,7 @@
    "outputs": [],
    "source": [
     "# Save your notebook first, then run this cell to export your submission.\n",
-    "grader.export()"
+    "grader.export(run_tests=True)"
    ]
   },
   {
@@ -287,6 +320,7 @@
    "version": "3.7.3"
   },
   "otter": {
+   "OK_FORMAT": true,
    "tests": {
     "hours_collaborators": {
      "name": "hours_collaborators",
@@ -324,17 +358,7 @@
       {
        "cases": [
         {
-         "code": ">>> assert(test_bayes_filter_sensor_update(b_print=False))\n",
-         "hidden": false,
-         "locked": false
-        },
-        {
-         "code": ">>> assert(test_move_one_direction(b_print=False))\n",
-         "hidden": false,
-         "locked": false
-        },
-        {
-         "code": ">>> assert(test_move_update(b_print=False))\n",
+         "code": ">>> assert(test_kalman_update(b_print=False))\n",
          "hidden": false,
          "locked": false
         }
