New files for particle assignment

--- a/RobotHallway/check_bayes_filter.ipynb
+++ b/RobotHallway/check_bayes_filter.ipynb
@@ -184,7 +184,9 @@
    "source": [
     "## Bayes filter\n",
     "\n",
-    "This is the part where you actually *do* the bayes' filter update. There's two parts, the sensor update and the move update. There are separate test methods for each."
+    "This is the part where you actually *do* the bayes' filter update. There's two parts, the sensor update and the move update. There are separate test methods for each, followed by a call to the method that does both.\n",
+    "\n",
+    "Edit the four methods in Bayes_filter.py"
    ]
   },
   {
@@ -221,7 +223,10 @@
     "\n",
     "# Syntax check 3, move\n",
     "bayes_filter.update_belief_move_left(robot_ground_truth)\n",
-    "bayes_filter.update_belief_move_right(robot_ground_truth)"
+    "bayes_filter.update_belief_move_right(robot_ground_truth)\n",
+    "\n",
+    "# Syntax check 4, full update\n",
+    "bayes_filter.one_full_update(world_ground_truth, robot_ground_truth, robot_sensor, \"move_left\", True)\n"
    ]
   },
   {
