Adding files for particle filter Removing unneeded file

--- a/RobotHallway/check_particle_filter.ipynb
+++ b/RobotHallway/check_particle_filter.ipynb
@@ -11,28 +11,22 @@
    "source": [
     "# Initialize Otter\n",
     "import otter\n",
-    "grader = otter.Notebook(\"check_kalman_filter.ipynb\")"
+    "grader = otter.Notebook(\"check_particle_filter.ipynb\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Kalman filter \n",
+    "# Particle filter \n",
     "\n",
-    "This Jupyter notebook file imports (and tests) all of the code needed to do the Kalman' filter assignment. Note that the actual code is in the .py files in this directory.\n",
+    "This Jupyter notebook file imports (and tests) all of the code needed to do the particle filter assignment. Note that the actual code is in the .py files in this directory.\n",
     "\n",
-    "This is where you'll fill in the missing code from the last assignment\n",
+    "You should only have to edit particle_filter.py - you did all the \"simulator\" code in the previous two assignments.\n",
     "\n",
-    "Slides for this assignment: https://docs.google.com/presentation/d/1Q6w-vczvWHanGDqbuz6H1qhTOkSrX54kf1g8NgTcipQ/edit?usp=sharing"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Robot ground truth\n",
-    "This gets all the code in Robot_ground_truth.py. If you change any code in that file then you will need to re-execute this import."
+    "Note that, although we use both sensors in this assignment, we'll only use one at a time, and update the particle distribution (importance sampling) before calling a calculate_weights method again.\n",
+    "\n",
+    "Slides for this assignment: https://docs.google.com/presentation/d/1GVCAWUSUhJiHP6VBi-HusDyZmunQG1mnVlopLhtRGLs/edit?usp=sharing"
    ]
   },
   {
@@ -42,6 +36,7 @@
    "outputs": [],
    "source": [
     "import sys; sys.path.insert(0, '.')\n",
+    "import numpy as np\n",
     "\n",
     "# These commands will force JN to actually re-load the external file when you re-execute the import command\n",
     "%load_ext autoreload\n",
@@ -54,7 +49,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from robot_ground_truth import RobotGroundTruth, test_continuous_move_functions"
+    "from particle_filter import ParticleFilter, test_particle_filter\n",
+    "from world_ground_truth import WorldGroundTruth\n",
+    "from robot_sensors import RobotSensors\n",
+    "from robot_ground_truth import RobotGroundTruth"
    ]
   },
   {
@@ -65,137 +63,15 @@
    },
    "outputs": [],
    "source": [
-    "# Syntax check\n",
-    "robot_gt = RobotGroundTruth()\n",
-    "robot_gt.reset_location()\n",
-    "robot_gt.set_move_continuos_probabilities(0.01)\n",
-    "ret_amt_moved = robot_gt.move_continuous(0.0)\n",
-    "if -0.1 < ret_amt_moved < 0.1:\n",
-    "    print(f\"Robot ground truth: Passed move continuous syntax check\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# Edit the code in robot_ground_truth.py (the methods tagged with Kalman assignment)\n",
-    "test_continuous_move_functions()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "deletable": false,
-    "editable": false
-   },
-   "outputs": [],
-   "source": [
-    "grader.check(\"robotGT\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Robot sensors"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "from robot_sensors import RobotSensors, test_continuous_sensor"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# Syntax check\n",
-    "robot_gt = RobotGroundTruth()\n",
-    "robot_sensor = RobotSensors()\n",
-    "robot_sensor.set_distance_wall_sensor_probabilities(sigma=0.01)\n",
-    "dist_with_noise = robot_sensor.query_distance_to_wall(robot_gt)\n",
-    "if 0.0 < dist_with_noise < 1.0:\n",
-    "    print(\"Dist wall sensor, passed syntax test\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# Edit the code in robot_sensors.py (the methods tagged with Bayes assignment)\n",
-    "test_continuous_sensor()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "deletable": false,
-    "editable": false
-   },
-   "outputs": [],
-   "source": [
-    "grader.check(\"robot_sensors\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Kalman filter\n",
-    "\n",
-    "This is the part where you actually *do* the kalman filter update. There's two parts, the sensor update and the move update. The test file runs a sensor, then a move, then a sequence of sensor, sequence of move, then a mix."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from kalman_filter import KalmanFilter, test_kalman_update"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# Syntax checks\n",
-    "kalman_filter = KalmanFilter()\n",
+    "# Declare variables\n",
+    "n_doors = 2\n",
+    "n_bins = 10\n",
+    "n_samples = 100\n",
+    "world_ground_truth = WorldGroundTruth()\n",
+    "world_ground_truth.random_door_placement(n_doors, n_bins)\n",
     "robot_ground_truth = RobotGroundTruth()\n",
     "robot_sensor = RobotSensors()\n",
-    "\n",
-    "# Set mu/sigmas\n",
-    "sensor_noise = {\"mu\": 0.0, \"sigma\": 0.1}\n",
-    "move_error = {\"mu\": 0.0, \"sigma\": 0.05}\n",
-    "robot_ground_truth.set_move_continuos_probabilities(move_error[\"sigma\"])\n",
-    "robot_sensor.set_distance_wall_sensor_probabilities(sensor_noise[\"sigma\"])\n",
-    "\n",
-    "kalman_filter.update_gauss_sensor_reading(robot_sensor, 0.1)\n",
-    "kalman_filter.update_continuous_move(robot_ground_truth, 0.0)"
+    "particle_filter = ParticleFilter()"
    ]
   },
   {
@@ -206,7 +82,79 @@
    },
    "outputs": [],
    "source": [
-    "test_kalman_update()"
+    "# Syntax check 1, reset probabilities\n",
+    "particle_filter.reset_particles(n_samples)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Syntax check 2, update move\n",
+    "particle_filter.update_particles_move_continuous(robot_ground_truth, 0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Syntax checks 3 and 4 - the two different sensor readings\n",
+    "particle_filter.calculate_weights_door_sensor_reading(world_ground_truth, robot_sensor, True)\n",
+    "if np.isclose(np.max(particle_filter.weights), np.min(particle_filter.weights)):\n",
+    "    print(f\"Possible error: The weights should not all be the same\")\n",
+    "\n",
+    "particle_filter.reset_particles(n_samples)\n",
+    "particle_filter.calculate_weights_distance_wall(robot_sensor, 0.1)\n",
+    "if np.isclose(np.max(particle_filter.weights), np.min(particle_filter.weights)):\n",
+    "    print(f\"Possible error: The weights should not all be the same\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Syntax check 5 - importance sampling\n",
+    "particle_filter.resample_particles()\n",
+    "if not np.isclose(np.max(particle_filter.weights), np.min(particle_filter.weights)):\n",
+    "    print(f\"Possible error: The weights should be set back to all the same\")\n",
+    "if np.unique(particle_filter.particles, return_counts=True) == n_samples:\n",
+    "    print(f\"Possible error: There probably should be duplicate particles {np.unique(particle_filter.particles, return_counts=True)} {n_samples}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Syntax checks 6 and 7 - the two full updates\n",
+    "particle_filter.one_full_update_door(world_ground_truth, robot_ground_truth, robot_sensor, u=0.1, z=True)\n",
+    "particle_filter.one_full_update_distance(robot_ground_truth, robot_sensor, u=0.1, z=0.6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "test_particle_filter(b_print=True)"
    ]
   },
   {
@@ -218,7 +166,7 @@
    },
    "outputs": [],
    "source": [
-    "grader.check(\"kalman_filter\")"
+    "grader.check(\"particle_filter\")"
    ]
   },
   {
@@ -284,7 +232,7 @@
     "\n",
     "Make sure you have run all cells in your notebook in order before running the cell below, so that all images/graphs appear in the output. The cell below will generate a zip file for you to submit. **Please save before exporting!**\n",
     "\n",
-    "Submit through gradescope, kalman filter"
+    "Submit through gradescope, particle filter"
    ]
   },
   {
@@ -358,52 +306,14 @@
       }
      ]
     },
-    "kalman_filter": {
-     "name": "kalman_filter",
-     "points": 15,
+    "particle_filter": {
+     "name": "particle_filter",
+     "points": 20,
      "suites": [
       {
        "cases": [
         {
-         "code": ">>> assert(test_kalman_update(b_print=False))\n",
-         "hidden": false,
-         "locked": false
-        }
-       ],
-       "scored": true,
-       "setup": "",
-       "teardown": "",
-       "type": "doctest"
-      }
-     ]
-    },
-    "robotGT": {
-     "name": "robotGT",
-     "points": 5,
-     "suites": [
-      {
-       "cases": [
-        {
-         "code": ">>> assert(test_continuous_move_functions(b_print=False))\n",
-         "hidden": false,
-         "locked": false
-        }
-       ],
-       "scored": true,
-       "setup": "",
-       "teardown": "",
-       "type": "doctest"
-      }
-     ]
-    },
-    "robot_sensors": {
-     "name": "robot_sensors",
-     "points": 10,
-     "suites": [
-      {
-       "cases": [
-        {
-         "code": ">>> assert(test_continuous_sensor(b_print=False))\n",
+         "code": ">>> assert(test_particle_filter(b_print=False))\n",
          "hidden": false,
          "locked": false
         }
