--- a/RobotHallway/check_bayes_filter.ipynb
+++ b/RobotHallway/check_bayes_filter.ipynb
@@ -184,7 +184,9 @@
    "source": [
     "## Bayes filter\n",
     "\n",
-    "This is the part where you actually *do* the bayes' filter update. There's two parts, the sensor update and the move update. There are separate test methods for each."
+    "This is the part where you actually *do* the bayes' filter update. There's two parts, the sensor update and the move update. There are separate test methods for each, followed by a call to the method that does both.\n",
+    "\n",
+    "Edit the four methods in Bayes_filter.py"
    ]
   },
   {
@@ -221,7 +223,10 @@
     "\n",
     "# Syntax check 3, move\n",
     "bayes_filter.update_belief_move_left(robot_ground_truth)\n",
-    "bayes_filter.update_belief_move_right(robot_ground_truth)"
+    "bayes_filter.update_belief_move_right(robot_ground_truth)\n",
+    "\n",
+    "# Syntax check 4, full update\n",
+    "bayes_filter.one_full_update(world_ground_truth, robot_ground_truth, robot_sensor, \"move_left\", True)\n"
    ]
   },
   {
@@ -301,30 +306,6 @@
     "editable": false
    },
    "source": [
-    "---\n",
-    "\n",
-    "To double-check your work, the cell below will rerun all of the autograder tests."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "deletable": false,
-    "editable": false
-   },
-   "outputs": [],
-   "source": [
-    "grader.check_all()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": false,
-    "editable": false
-   },
-   "source": [
     "## Submission\n",
     "\n",
     "Make sure you have run all cells in your notebook in order before running the cell below, so that all images/graphs appear in the output. The cell below will generate a zip file for you to submit. **Please save before exporting!**\n",
@@ -342,7 +323,7 @@
    "outputs": [],
    "source": [
     "# Save your notebook first, then run this cell to export your submission.\n",
-    "grader.export()"
+    "grader.export(run_tests=True)"
    ]
   },
   {
@@ -369,9 +350,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   },
   "otter": {
+   "OK_FORMAT": true,
    "tests": {
     "bayes_filter": {
      "name": "bayes_filter",
