--- a/RobotHallway/check_bayes_filter.ipynb
+++ b/RobotHallway/check_bayes_filter.ipynb
@@ -310,7 +310,7 @@
     "\n",
     "Make sure you have run all cells in your notebook in order before running the cell below, so that all images/graphs appear in the output. The cell below will generate a zip file for you to submit. **Please save before exporting!**\n",
     "\n",
-    "Submit through gradescope, bayes filter"
+    "Submit through gradescope, bayes filter. Include just this .ipynb file and ALL of the .py files"
    ]
   },
   {
