--- a/RobotHallway/check_particle_filter.ipynb
+++ b/RobotHallway/check_particle_filter.ipynb
@@ -49,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from particle_filter import ParticleFilter, test_particle_filter\n",
+    "from particle_filter import ParticleFilter, test_particle_filter_syntax\n",
     "from world_ground_truth import WorldGroundTruth\n",
     "from robot_sensors import RobotSensors\n",
     "from robot_ground_truth import RobotGroundTruth"
@@ -154,7 +154,7 @@
    },
    "outputs": [],
    "source": [
-    "test_particle_filter(b_print=True)"
+    "test_particle_filter_syntax(b_print=True)"
    ]
   },
   {
@@ -166,7 +166,7 @@
    },
    "outputs": [],
    "source": [
-    "grader.check(\"particle_filter\")"
+    "grader.check(\"syntax_check\")"
    ]
   },
   {
@@ -232,7 +232,7 @@
     "\n",
     "Make sure you have run all cells in your notebook in order before running the cell below, so that all images/graphs appear in the output. The cell below will generate a zip file for you to submit. **Please save before exporting!**\n",
     "\n",
-    "Submit through gradescope, particle filter"
+    "Submit through gradescope, particle filter. Include just this .ipynb file and ALL of the .py files"
    ]
   },
   {
@@ -272,7 +272,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   },
   "otter": {
    "OK_FORMAT": true,
@@ -306,14 +306,14 @@
       }
      ]
     },
-    "particle_filter": {
-     "name": "particle_filter",
-     "points": 20,
+    "syntax_check": {
+     "name": "syntax_check",
+     "points": 5,
      "suites": [
       {
        "cases": [
         {
-         "code": ">>> assert(test_particle_filter(b_print=False))\n",
+         "code": ">>> assert(test_particle_filter_syntax(b_print=False))\n",
          "hidden": false,
          "locked": false
         }
