--- a/Homework_1_probability/check_probability_sampling.ipynb
+++ b/Homework_1_probability/check_probability_sampling.ipynb
@@ -11,7 +11,7 @@
    "source": [
     "# Initialize Otter\n",
     "import otter\n",
-    "grader = otter.Notebook(\"probability_sampling.ipynb\")"
+    "grader = otter.Notebook(\"check_probability_sampling.ipynb\")"
    ]
   },
   {
