--- a/RobotHallway/check_particle_filter.ipynb
+++ b/RobotHallway/check_particle_filter.ipynb
@@ -37,6 +37,8 @@
    "source": [
     "import sys; sys.path.insert(0, '.')\n",
     "import numpy as np\n",
+    "import pdfkit\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "# These commands will force JN to actually re-load the external file when you re-execute the import command\n",
     "%load_ext autoreload\n",
@@ -167,6 +169,230 @@
    "outputs": [],
    "source": [
     "grader.check(\"syntax_check\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<!-- BEGIN QUESTION -->\n",
+    "\n",
+    "## Door sensor\n",
+    "Did you calculate the door sensor correctly?\n",
+    "\n",
+    "Tall particles in door if sensor is True, otherwise, short particles in doors."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "fig, axs = plt.subplots(1, 2, figsize=(16, 4))\n",
+    "\n",
+    "n_doors = 2\n",
+    "n_bins = 10\n",
+    "n_particles = 100\n",
+    "np.random.seed(2)\n",
+    "\n",
+    "# Initialize with values that are NOT the default ones\n",
+    "world_ground_truth.random_door_placement(n_doors, n_bins)\n",
+    "\n",
+    "# Two cases - sensor returned True or False\n",
+    "axs[0].set_title(\"Sensor True\")\n",
+    "particle_filter.reset_particles(n_particles)\n",
+    "particle_filter.calculate_weights_door_sensor_reading(world_ground_truth, robot_sensor, True)\n",
+    "particle_filter.plot_particles_with_weights(axs[0], world_ground_truth, robot_ground_truth)\n",
+    "axs[0].axis('equal')\n",
+    "\n",
+    "axs[1].set_title(\"Sensor False\")\n",
+    "particle_filter.reset_particles(n_particles)\n",
+    "particle_filter.calculate_weights_door_sensor_reading(world_ground_truth, robot_sensor, False)\n",
+    "particle_filter.plot_particles_with_weights(axs[1], world_ground_truth, robot_ground_truth)\n",
+    "axs[1].axis('equal')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<!-- END QUESTION -->\n",
+    "\n",
+    "<!-- BEGIN QUESTION -->\n",
+    "\n",
+    "## Distance sensor - is your distance sensor setting correct values?\n",
+    "Should show a Gaussian centered at the distance input"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "fig, axs = plt.subplots(1, 2, figsize=(16, 4))\n",
+    "\n",
+    "# Two cases - sensor returned 0.25 or 0.6\n",
+    "axs[0].set_title(\"0.25 off left wall\")\n",
+    "robot_ground_truth.robot_loc = 0.25\n",
+    "particle_filter.reset_particles(n_particles)\n",
+    "particle_filter.calculate_weights_distance_wall(robot_sensor, 0.25)\n",
+    "particle_filter.plot_particles_with_weights(axs[0], world_ground_truth, robot_ground_truth)\n",
+    "axs[0].axis('equal')\n",
+    "\n",
+    "axs[1].set_title(\"0.6 location\")\n",
+    "robot_ground_truth.robot_loc = 0.6\n",
+    "particle_filter.reset_particles(n_particles)\n",
+    "particle_filter.calculate_weights_distance_wall(robot_sensor, 0.6)\n",
+    "particle_filter.plot_particles_with_weights(axs[1], world_ground_truth, robot_ground_truth)\n",
+    "axs[1].axis('equal')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<!-- END QUESTION -->\n",
+    "\n",
+    "<!-- BEGIN QUESTION -->\n",
+    "\n",
+    "## Importance weighting/resampling\n",
+    "Do you resample the particles correctly? More particles in \"bump\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "fig, axs = plt.subplots(1, 2, figsize=(16, 4))\n",
+    "\n",
+    "n_particles = 50\n",
+    "# Sensor reading first, to calculate weights\n",
+    "axs[0].set_title(\"0.25 off left wall\")\n",
+    "robot_ground_truth.robot_loc = 0.25\n",
+    "particle_filter.reset_particles(n_particles)\n",
+    "particle_filter.calculate_weights_distance_wall(robot_sensor, 0.25)\n",
+    "particle_filter.plot_particles_with_weights(axs[0], world_ground_truth, robot_ground_truth)\n",
+    "axs[0].axis('equal')\n",
+    "\n",
+    "# Now resample\n",
+    "axs[1].set_title(\"Resampled\")\n",
+    "particle_filter.resample_particles()\n",
+    "particle_filter.plot_particles_with_weights(axs[1], world_ground_truth, robot_ground_truth)\n",
+    "axs[1].axis('equal')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<!-- END QUESTION -->\n",
+    "\n",
+    "<!-- BEGIN QUESTION -->\n",
+    "\n",
+    "## Robot moves\n",
+    "Do the particles shift? All should pile up on the left (or right) side, depending on the move direction.\n",
+    "Also should spread out over time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "fig, axs = plt.subplots(1, 4, figsize=(24, 4))\n",
+    "\n",
+    "n_particles = 75\n",
+    "\n",
+    "# Move to the left\n",
+    "axs[0].set_title(\"Move left\")\n",
+    "robot_ground_truth.robot_loc = 0.4\n",
+    "particle_filter.reset_particles(n_particles)\n",
+    "particle_filter.update_particles_move_continuous(robot_ground_truth, -0.1)\n",
+    "particle_filter.plot_particles_with_weights(axs[0], world_ground_truth, robot_ground_truth)\n",
+    "axs[0].axis('equal')\n",
+    "\n",
+    "axs[1].set_title(\"Move right\")\n",
+    "robot_ground_truth.robot_loc = 0.6\n",
+    "particle_filter.reset_particles(n_particles)\n",
+    "particle_filter.update_particles_move_continuous(robot_ground_truth, 0.1)\n",
+    "particle_filter.plot_particles_with_weights(axs[1], world_ground_truth, robot_ground_truth)\n",
+    "axs[1].axis('equal')\n",
+    "\n",
+    "axs[2].set_title(\"Door reading\")\n",
+    "robot_ground_truth.robot_loc = 0.5\n",
+    "particle_filter.reset_particles(n_particles)\n",
+    "# Pile up particles in front of doors\n",
+    "for _ in range(0, 2):\n",
+    "    particle_filter.calculate_weights_door_sensor_reading(world_ground_truth, robot_sensor, True)\n",
+    "    particle_filter.resample_particles()\n",
+    "particle_filter.plot_particles_with_weights(axs[2], world_ground_truth, robot_ground_truth)\n",
+    "axs[2].axis('equal')\n",
+    "\n",
+    "# \"Don't\" move for 2 iterations - but should still spread particles out\n",
+    "axs[3].set_title(\"Spread out\")\n",
+    "for _ in range(0, 2):\n",
+    "    particle_filter.update_particles_move_continuous(robot_ground_truth, 0.0)\n",
+    "    \n",
+    "particle_filter.plot_particles_with_weights(axs[3], world_ground_truth, robot_ground_truth)\n",
+    "axs[3].axis('equal')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<!-- END QUESTION -->\n",
+    "\n",
+    "## Do one full loop\n",
+    "Do a move, sensor loop a few times"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "fig, axs = plt.subplots(1, 4, figsize=(24, 4))\n",
+    "\n",
+    "n_particles = 75\n",
+    "\n",
+    "# Moves followed by door, then distance, then door, then distance reading\n",
+    "moves = [-0.1, -0.05, 0.1, 0.0]\n",
+    "\n",
+    "particle_filter.reset_particles(n_particles)\n",
+    "robot_ground_truth.robot_loc = 0.5\n",
+    "\n",
+    "np.random.seed(3)\n",
+    "\n",
+    "for i, u in enumerate(moves):\n",
+    "    robot_ground_truth.move_continuous(u)\n",
+    "    if i % 2:\n",
+    "        saw_door = robot_sensor.query_door(robot_ground_truth, world_ground_truth)\n",
+    "        particle_filter.one_full_update_door(world_ground_truth, robot_ground_truth, robot_sensor, u, saw_door)\n",
+    "        axs[i].set_title(f\"Move {u}, door {saw_door}\")\n",
+    "    else:\n",
+    "        dist = robot_sensor.query_distance_to_wall(robot_ground_truth)\n",
+    "        particle_filter.one_full_update_distance(robot_ground_truth, robot_sensor, u, dist)\n",
+    "        axs[i].set_title(f\"Move {u}, distance {dist:0.2f}\")\n",
+    "    \n",
+    "    axs[i].axis('equal')\n",
+    "    particle_filter.plot_particles_with_weights(axs[i], world_ground_truth, robot_ground_truth)\n"
    ]
   },
   {
@@ -308,7 +534,7 @@
     },
     "syntax_check": {
      "name": "syntax_check",
-     "points": 5,
+     "points": 4,
      "suites": [
       {
        "cases": [
