Lab 3 shell code more maps for exploring/path planning

--- a/final_project/check_dijkstra.ipynb
+++ b/final_project/check_dijkstra.ipynb
@@ -43,7 +43,10 @@
     "import heapq\n",
     "\n",
     "# Using imageio to read in the image\n",
-    "import imageio"
+    "import imageio\n",
+    "\n",
+    "# For reading yaml files\n",
+    "import yaml"
    ]
   },
   {
@@ -78,7 +81,7 @@
    },
    "outputs": [],
    "source": [
-    "from path_planning import convert_image, dijkstra, plot_with_path"
+    "from path_planning import convert_image, dijkstra, plot_with_path, open_image"
    ]
   },
   {
@@ -89,23 +92,43 @@
    },
    "outputs": [],
    "source": [
-    "im = imageio.imread(\"Data/SLAM_map.png\")\n",
-    "im_thresh = convert_image(im)\n",
+    "# Opens and threshold the SLAM map image\n",
+    "im, im_thresh = open_image(\"SLAM_map.png\")\n",
     "\n",
     "robot_start_loc = (200, 150)\n",
     "# Closer one to try - change this after it works...\n",
     "robot_goal_loc = (315, 250)\n",
     "#robot_goal_loc = (615, 850)\n",
+    "zoom = 0.8\n",
     "\n",
     "\"\"\"\n",
     "print(f\"Image shape {im_thresh.shape}\")\n",
     "for i in range(0, im_thresh.shape[1]-1):\n",
     "    for j in range(0, im_thresh.shape[0]-1):\n",
     "        if is_free(im_thresh, (i, j)):\n",
-    "            print(f\"Free {j} {i}\")\n",
+    "            print(f\"Free {i} {j}\")\n",
     "\"\"\"\n",
     "path = dijkstra(im_thresh, robot_start_loc, robot_goal_loc)\n",
-    "plot_with_path(im, im_thresh, robot_start_loc, robot_goal_loc, path)\n"
+    "plot_with_path(im, im_thresh, zoom=zoom, robot_loc=robot_start_loc, goal_loc=robot_goal_loc, path=path)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Opens and threshold a real SLAM map image\n",
+    "im, im_thresh = open_image(\"map.pgm\")\n",
+    "\n",
+    "robot_start_loc = (1940, 1953)\n",
+    "robot_goal_loc = (2135, 2045)\n",
+    "zoom = 0.1\n",
+    "\n",
+    "path = dijkstra(im_thresh, robot_start_loc, robot_goal_loc)\n",
+    "plot_with_path(im, im_thresh, zoom=zoom, robot_loc=robot_start_loc, goal_loc=robot_goal_loc, path=path)"
    ]
   },
   {
@@ -131,7 +154,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "# List of names (creates a set)\n",
+    "# List of names (create\"s a set)\n",
     "worked_with_names = {\"not filled out\"}\n",
     "# List of URLS (creates a set)\n",
     "websites = {\"not filled out\"}\n",
@@ -162,6 +185,30 @@
     "editable": false
    },
    "source": [
+    "---\n",
+    "\n",
+    "To double-check your work, the cell below will rerun all of the autograder tests."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
+   "outputs": [],
+   "source": [
+    "grader.check_all()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
+   "source": [
     "## Submission\n",
     "\n",
     "Make sure you have run all cells in your notebook in order before running the cell below, so that all images/graphs appear in the output. The cell below will generate a zip file for you to submit. **Please save before exporting!**\n",
@@ -179,7 +226,7 @@
    "outputs": [],
    "source": [
     "# Save your notebook first, then run this cell to export your submission.\n",
-    "grader.export(run_tests=True)"
+    "grader.export()"
    ]
   },
   {
@@ -206,10 +253,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   },
   "otter": {
-   "OK_FORMAT": true,
    "tests": {
     "hours_collaborators": {
      "name": "hours_collaborators",
