--- a/final_project/check_exploring.ipynb
+++ b/final_project/check_exploring.ipynb
@@ -45,7 +45,10 @@
     "import heapq\n",
     "\n",
     "# Using imageio to read in the image\n",
-    "import imageio"
+    "import imageio\n",
+    "\n",
+    "# Reading in map meta data\n",
+    "import yaml"
    ]
   },
   {
@@ -68,7 +71,7 @@
    "source": [
     "<!-- BEGIN QUESTION -->\n",
     "\n",
-    "# Run exploring a pretend SLAM map\n",
+    "# Run exploring a SLAM map\n",
     "\n"
    ]
   },
@@ -80,7 +83,7 @@
    },
    "outputs": [],
    "source": [
-    "from path_planning import convert_image, dijkstra\n",
+    "from path_planning import convert_image, dijkstra, open_image, plot_with_path\n",
     "from exploring import find_all_possible_goals, find_best_point, plot_with_explore_points, find_waypoints"
    ]
   },
@@ -92,18 +95,18 @@
    },
    "outputs": [],
    "source": [
-    "im = imageio.imread(\"Data/SLAM_map.png\")\n",
-    "im_thresh = convert_image(im)\n",
+    "# You can use map or initial\n",
+    "im, im_thresh = open_image(\"map.pgm\")\n",
     "\n",
     "# Split into two pieces - find all of the points that are adjacent to an unknown area and a visible area\n",
     "#    Then pick the best one\n",
     "all_unseen = find_all_possible_goals(im_thresh)\n",
     "\n",
-    "robot_start_loc = (200, 150)\n",
+    "robot_start_loc = (1940, 1953)\n",
     "best_unseen = find_best_point(im_thresh, all_unseen, robot_loc=robot_start_loc)\n",
     "\n",
     "# Note: This can be a little slow (it's drawing a lot of little points)\n",
-    "plot_with_explore_points(im_thresh, robot_start_loc, all_unseen, best_unseen)"
+    "plot_with_explore_points(im_thresh, zoom=0.1, robot_loc=robot_start_loc, explore_points=all_unseen, best_pt=best_unseen)"
    ]
   },
   {
@@ -128,7 +131,8 @@
    "source": [
     "path = dijkstra(im_thresh, robot_start_loc, best_unseen)\n",
     "waypoints = find_waypoints(im_thresh, path)\n",
-    "plot_with_path(im, im_thresh, robot_start_loc, best_unseen, path)"
+    "plot_with_path(im, im_thresh, zoom=0.1, robot_loc=robot_start_loc, goal_loc=best_unseen, path=waypoints)\n",
+    "print(f\"Waypoints has {len(waypoints)} points of {len(path)}\")"
    ]
   },
   {
@@ -185,6 +189,30 @@
     "editable": false
    },
    "source": [
+    "---\n",
+    "\n",
+    "To double-check your work, the cell below will rerun all of the autograder tests."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
+   "outputs": [],
+   "source": [
+    "grader.check_all()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
+   "source": [
     "## Submission\n",
     "\n",
     "Make sure you have run all cells in your notebook in order before running the cell below, so that all images/graphs appear in the output. The cell below will generate a zip file for you to submit. **Please save before exporting!**\n",
@@ -202,7 +230,7 @@
    "outputs": [],
    "source": [
     "# Save your notebook first, then run this cell to export your submission.\n",
-    "grader.export(run_tests=True)"
+    "grader.export()"
    ]
   },
   {
@@ -229,10 +257,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   },
   "otter": {
-   "OK_FORMAT": true,
    "tests": {
     "hours_collaborators": {
      "name": "hours_collaborators",
