Fixing 3.7 to 3.11 and vscode issues

--- a/Homework_1_probability/probability_sampling.ipynb
+++ b/Homework_1_probability/probability_sampling.ipynb
@@ -56,7 +56,10 @@
 },
 {
 "cell_type": "markdown",
-"metadata": {},
+"metadata": {
+"deletable": false,
+"editable": false
+},
 "source": [
 "## Boolean\n",
 "Simplest case - returns True or False, with some probability\n",
@@ -172,7 +175,10 @@
 },
 {
 "cell_type": "markdown",
-"metadata": {},
+"metadata": {
+"deletable": false,
+"editable": false
+},
 "source": [
 "# Discrete\n",
 "\n",
@@ -312,7 +318,10 @@
 },
 {
 "cell_type": "markdown",
-"metadata": {},
+"metadata": {
+"deletable": false,
+"editable": false
+},
 "source": [
 "# Bins \n",
 "\n",
@@ -427,7 +436,10 @@
 },
 {
 "cell_type": "markdown",
-"metadata": {},
+"metadata": {
+"deletable": false,
+"editable": false
+},
 "source": [
 "## Gaussian sampling\n",
 "This is a generic Gaussian noise variable - I'm including it here because you'll need it in subsequent assignments. But it's basically \"store mu and sigma, then use those to generate noise\""
@@ -528,7 +540,10 @@
 },
 {
 "cell_type": "markdown",
-"metadata": {},
+"metadata": {
+"deletable": false,
+"editable": false
+},
 "source": [
 "<!-- BEGIN QUESTION -->\n",
 "\n",
@@ -719,7 +734,10 @@
 },
 {
 "cell_type": "markdown",
-"metadata": {},
+"metadata": {
+"deletable": false,
+"editable": false
+},
 "source": [
 "<!-- END QUESTION -->\n",
 "\n",
