--- a/RobotHallway/check_bayes_filter.ipynb
+++ b/RobotHallway/check_bayes_filter.ipynb
@@ -16,7 +16,10 @@
 },
 {
 "cell_type": "markdown",
-"metadata": {},
+"metadata": {
+"deletable": false,
+"editable": false
+},
 "source": [
 "# Bayes filter using bins\n",
 "\n",
@@ -29,7 +32,10 @@
 },
 {
 "cell_type": "markdown",
-"metadata": {},
+"metadata": {
+"deletable": false,
+"editable": false
+},
 "source": [
 "## Robot ground truth\n",
 "This gets all the code in Robot_ground_truth.py. If you change any code in that file then you will need to re-execute this import."
@@ -38,7 +44,10 @@
 {
 "cell_type": "code",
 "execution_count": null,
-"metadata": {},
+"metadata": {
+"deletable": false,
+"editable": false
+},
 "outputs": [],
 "source": [
 "import sys; sys.path.insert(0, '.')\n",
@@ -51,7 +60,10 @@
 {
 "cell_type": "code",
 "execution_count": null,
-"metadata": {},
+"metadata": {
+"deletable": false,
+"editable": false
+},
 "outputs": [],
 "source": [
 "from robot_ground_truth import RobotGroundTruth, test_discrete_move_functions"
@@ -114,7 +126,10 @@
 },
 {
 "cell_type": "markdown",
-"metadata": {},
+"metadata": {
+"deletable": false,
+"editable": false
+},
 "source": [
 "## Robot sensors"
 ]
@@ -180,7 +195,10 @@
 },
 {
 "cell_type": "markdown",
-"metadata": {},
+"metadata": {
+"deletable": false,
+"editable": false
+},
 "source": [
 "## Bayes filter\n",
 "\n",
@@ -192,7 +210,10 @@
 {
 "cell_type": "code",
 "execution_count": null,
-"metadata": {},
+"metadata": {
+"deletable": false,
+"editable": false
+},
 "outputs": [],
 "source": [
 "from bayes_filter import BayesFilter, test_bayes_filter_sensor_update, test_move_one_direction, test_move_update"
@@ -256,7 +277,10 @@
 },
 {
 "cell_type": "markdown",
-"metadata": {},
+"metadata": {
+"deletable": false,
+"editable": false
+},
 "source": [
 "## Hours and collaborators\n",
 "Required for every assignment - fill out before you hand-in.\n",
