--- a/RobotHallway/check_particle_filter.ipynb
+++ b/RobotHallway/check_particle_filter.ipynb
@@ -48,7 +48,10 @@
 {
 "cell_type": "code",
 "execution_count": null,
-"metadata": {},
+"metadata": {
+"deletable": false,
+"editable": false
+},
 "outputs": [],
 "source": [
 "from particle_filter import ParticleFilter, test_particle_filter_syntax\n",
@@ -173,7 +176,10 @@
 },
 {
 "cell_type": "markdown",
-"metadata": {},
+"metadata": {
+"deletable": false,
+"editable": false
+},
 "source": [
 "<!-- BEGIN QUESTION -->\n",
 "\n",
@@ -217,7 +223,10 @@
 },
 {
 "cell_type": "markdown",
-"metadata": {},
+"metadata": {
+"deletable": false,
+"editable": false
+},
 "source": [
 "<!-- END QUESTION -->\n",
 "\n",
@@ -255,7 +264,10 @@
 },
 {
 "cell_type": "markdown",
-"metadata": {},
+"metadata": {
+"deletable": false,
+"editable": false
+},
 "source": [
 "<!-- END QUESTION -->\n",
 "\n",
@@ -293,7 +305,10 @@
 },
 {
 "cell_type": "markdown",
-"metadata": {},
+"metadata": {
+"deletable": false,
+"editable": false
+},
 "source": [
 "<!-- END QUESTION -->\n",
 "\n",
@@ -352,7 +367,10 @@
 },
 {
 "cell_type": "markdown",
-"metadata": {},
+"metadata": {
+"deletable": false,
+"editable": false
+},
 "source": [
 "<!-- END QUESTION -->\n",
 "\n",
@@ -397,7 +415,10 @@
 },
 {
 "cell_type": "markdown",
-"metadata": {},
+"metadata": {
+"deletable": false,
+"editable": false
+},
 "source": [
 "## Hours and collaborators\n",
 "Required for every assignment - fill out before you hand-in.\n",
