--- a/RobotHallway/check_kalman_filter.ipynb
+++ b/RobotHallway/check_kalman_filter.ipynb
@@ -16,7 +16,10 @@
 },
 {
 "cell_type": "markdown",
-"metadata": {},
+"metadata": {
+"deletable": false,
+"editable": false
+},
 "source": [
 "# Kalman filter \n",
 "\n",
@@ -29,7 +32,10 @@
 },
 {
 "cell_type": "markdown",
-"metadata": {},
+"metadata": {
+"deletable": false,
+"editable": false
+},
 "source": [
 "## Robot ground truth\n",
 "This gets all the code in Robot_ground_truth.py. If you change any code in that file then you will need to re-execute this import."
@@ -38,7 +44,10 @@
 {
 "cell_type": "code",
 "execution_count": null,
-"metadata": {},
+"metadata": {
+"deletable": false,
+"editable": false
+},
 "outputs": [],
 "source": [
 "import sys; sys.path.insert(0, '.')\n",
@@ -51,7 +60,10 @@
 {
 "cell_type": "code",
 "execution_count": null,
-"metadata": {},
+"metadata": {
+"deletable": false,
+"editable": false
+},
 "outputs": [],
 "source": [
 "from robot_ground_truth import RobotGroundTruth, test_continuous_move_functions"
@@ -100,7 +112,10 @@
 },
 {
 "cell_type": "markdown",
-"metadata": {},
+"metadata": {
+"deletable": false,
+"editable": false
+},
 "source": [
 "## Robot sensors"
 ]
@@ -159,7 +174,10 @@
 },
 {
 "cell_type": "markdown",
-"metadata": {},
+"metadata": {
+"deletable": false,
+"editable": false
+},
 "source": [
 "## Kalman filter\n",
 "\n",
@@ -169,7 +187,10 @@
 {
 "cell_type": "code",
 "execution_count": null,
-"metadata": {},
+"metadata": {
+"deletable": false,
+"editable": false
+},
 "outputs": [],
 "source": [
 "from kalman_filter import KalmanFilter, test_kalman_update"
@@ -223,7 +244,10 @@
 },
 {
 "cell_type": "markdown",
-"metadata": {},
+"metadata": {
+"deletable": false,
+"editable": false
+},
 "source": [
 "## Hours and collaborators\n",
 "Required for every assignment - fill out before you hand-in.\n",
