--- a/labs_and_final_project/dijkstra.ipynb
+++ b/labs_and_final_project/dijkstra.ipynb
@@ -65,7 +65,10 @@
 },
 {
 "cell_type": "markdown",
-"metadata": {},
+"metadata": {
+"deletable": false,
+"editable": false
+},
 "source": [
 "<!-- BEGIN QUESTION -->\n",
 "\n",
@@ -133,7 +136,10 @@
 },
 {
 "cell_type": "markdown",
-"metadata": {},
+"metadata": {
+"deletable": false,
+"editable": false
+},
 "source": [
 "<!-- END QUESTION -->\n",
 "\n",
