--- a/labs_and_final_project/exploring.ipynb
+++ b/labs_and_final_project/exploring.ipynb
@@ -67,7 +67,10 @@
 },
 {
 "cell_type": "markdown",
-"metadata": {},
+"metadata": {
+"deletable": false,
+"editable": false
+},
 "source": [
 "<!-- BEGIN QUESTION -->\n",
 "\n",
@@ -111,7 +114,10 @@
 },
 {
 "cell_type": "markdown",
-"metadata": {},
+"metadata": {
+"deletable": false,
+"editable": false
+},
 "source": [
 "<!-- END QUESTION -->\n",
 "\n",
@@ -137,7 +143,10 @@
 },
 {
 "cell_type": "markdown",
-"metadata": {},
+"metadata": {
+"deletable": false,
+"editable": false
+},
 "source": [
 "<!-- END QUESTION -->\n",
 "\n",
