ROB456 setup fall 24

--- a/RobotHallway/check_bayes_filter.ipynb
+++ b/RobotHallway/check_bayes_filter.ipynb
@@ -204,7 +204,8 @@
 "\n",
 "This is the part where you actually *do* the bayes' filter update. There's two parts, the sensor update and the move update. There are separate test methods for each, followed by a call to the method that does both.\n",
 "\n",
-"Edit the four methods in Bayes_filter.py"
+"Edit the four methods in **bayes_filter.py**\n",
+"\n"
 ]
 },
 {
@@ -258,6 +259,12 @@
 },
 "outputs": [],
 "source": [
+"# Note: If you are passing these tests but NOT passing the grader check, the problem is (probably) that you are printing out something in your code.\n",
+"# If you are passing the first two tests, but not the test_move_update \n",
+"#   If the probablities are wrong, it's probably because you're not saving your probabilities OR you haven't filled in one_full_update in Bayes_filter.py\n",
+"#   If you're getting a Warning: random number generator is off error, you're calling robot_sensor.query_door_sensor (or robot_ground_truth.move) more \n",
+"#     than once and/or calling random() more than once for each of those (or calling the query/move in the one_full_update method)\n",
+"#     Also check that you are using numpy.random.uniform, NOT a different package, for generating random numbers\n",
 "test_bayes_filter_sensor_update()\n",
 "test_move_one_direction()\n",
 "test_move_update()"
@@ -301,14 +308,10 @@
 "\n",
 "# List of names (creates a set)\n",
 "worked_with_names = {\"not filled out\"}\n",
-"# List of URLS (creates a set)\n",
+"# List of URLS TAF24 (creates a set)\n",
 "websites = {\"not filled out\"}\n",
 "# Approximate number of hours, including lab/in-class time\n",
-"hours = -1.5\n",
-"\n",
-"# for all row, column in all_indices_from_where\n",
-"#.   if this is the column for wrist torque \n",
-"#.      print(f\"Row: {r}, Time step: {c // n_time_steps} Successful y/n: {pick_data[r, -1] == 1}, value: {pick_data[r, c]}\")"
+"hours = -1.5"
 ]
 },
 {
@@ -325,36 +328,20 @@
 },
 {
 "cell_type": "markdown",
-"metadata": {
-"deletable": false,
-"editable": false
-},
-"source": [
-"## Submission\n",
-"\n",
-"Make sure you have run all cells in your notebook in order before running the cell below, so that all images/graphs appear in the output. The cell below will generate a zip file for you to submit. **Please save before exporting!**\n",
-"\n",
-"Submit through gradescope, bayes filter. Include JUST this .ipynb file and ALL of the .py files in the RobotHallway folder"
-]
-},
-{
-"cell_type": "code",
-"execution_count": null,
-"metadata": {
-"deletable": false,
-"editable": false
-},
-"outputs": [],
-"source": [
-"# Save your notebook first, then run this cell to export your submission.\n",
-"grader.export(run_tests=True)"
-]
-},
-{
-"cell_type": "markdown",
 "metadata": {},
 "source": [
-" "
+"### To submit\n",
+"\n",
+"- Do a restart then run all to make sure everything runs ok\n",
+"- Save the file\n",
+"- Submit this .ipynb file and **robot_ground_truth.py**, **robot_sensors.py** and **bayes_filter.py** through gradescope, Homework Bayes filter\n",
+"- You do NOT need to submit the data files - we will supply those, along with **world_ground_truth.py**\n",
+"- Take out/suppress all print statements that you added (that are not part of the tests)\n",
+"\n",
+"If the Gradescope autograder fails, please check here first for common reasons for it to fail\n",
+"    https://docs.google.com/presentation/d/1tYa5oycUiG4YhXUq5vHvPOpWJ4k_xUPp2rUNIL7Q9RI/edit?usp=sharing\n",
+"\n",
+"Most likely failure for this assignment is you forgot to include **robot_ground_truth.py** and **bayes_filter.py** and/or you put the file(s) in a folder\n"
 ]
 }
 ],
@@ -374,7 +361,7 @@
 "name": "python",
 "nbconvert_exporter": "python",
 "pygments_lexer": "ipython3",
-"version": "3.7.4"
+"version": "3.11.7"
 },
 "otter": {
 "OK_FORMAT": true,
@@ -386,17 +373,17 @@
 {
 "cases": [
 {
-"code": ">>> assert(test_bayes_filter_sensor_update(b_print=False))\n",
+"code": ">>> assert test_bayes_filter_sensor_update(b_print=False)\n",
 "hidden": false,
 "locked": false
 },
 {
-"code": ">>> assert(test_move_one_direction(b_print=False))\n",
+"code": ">>> assert test_move_one_direction(b_print=False)\n",
 "hidden": false,
 "locked": false
 },
 {
-"code": ">>> assert(test_move_update(b_print=False))\n",
+"code": ">>> assert test_move_update(b_print=False)\n",
 "hidden": false,
 "locked": false
 }
@@ -415,17 +402,17 @@
 {
 "cases": [
 {
-"code": ">>> assert(not \"not filled out\" in worked_with_names)\n",
+"code": ">>> assert not 'not filled out' in worked_with_names\n",
 "hidden": false,
 "locked": false
 },
 {
-"code": ">>> assert(not \"not filled out\" in websites)\n",
+"code": ">>> assert not 'not filled out' in websites\n",
 "hidden": false,
 "locked": false
 },
 {
-"code": ">>> assert(hours > 0)\n",
+"code": ">>> assert hours > 0\n",
 "hidden": false,
 "locked": false
 }
@@ -444,7 +431,7 @@
 {
 "cases": [
 {
-"code": ">>> assert(test_discrete_move_functions(b_print=False))\n",
+"code": ">>> assert test_discrete_move_functions(b_print=False)\n",
 "hidden": false,
 "locked": false
 }
@@ -463,7 +450,7 @@
 {
 "cases": [
 {
-"code": ">>> assert(test_discrete_sensors(b_print=False))\n",
+"code": ">>> assert test_discrete_sensors(b_print=False)\n",
 "hidden": false,
 "locked": false
 }
