--- a/Homework_1_probability/probability_sampling.ipynb
+++ b/Homework_1_probability/probability_sampling.ipynb
@@ -48,6 +48,19 @@
 "metadata": {},
 "outputs": [],
 "source": [
+"# Install a pip package in the current Jupyter kernel\n",
+"# Note: this is a safety check in case your JN install was not in the same place as your libraries\n",
+"import sys\n",
+"!{sys.executable} -m pip install numpy\n",
+"!{sys.executable} -m pip install matplotlib"
+]
+},
+{
+"cell_type": "code",
+"execution_count": null,
+"metadata": {},
+"outputs": [],
+"source": [
 "# The imports you'll need\n",
 "from numpy import random\n",
 "import numpy as np\n",
@@ -101,11 +114,11 @@
 },
 "outputs": [],
 "source": [
-"    # First, check that you have no obvious syntax errors \n",
-"    boolean_variable = {\"prob_return_true\": 0.7}\n",
-"    ret_val = sample_boolean_variable(boolean_variable)\n",
-"    if ret_val is True or ret_val is False:\n",
-"        print(\"sample_boolean: Passed syntax check\")\n"
+"# First, check that you have no obvious syntax errors \n",
+"boolean_variable = {\"prob_return_true\": 0.7}\n",
+"ret_val = sample_boolean_variable(boolean_variable)\n",
+"if ret_val is True or ret_val is False:\n",
+"    print(\"sample_boolean: Passed syntax check\")\n"
 ]
 },
 {
@@ -226,6 +239,7 @@
 "    #  for JUST the test case in the next cell - it won't work for test_discrete\n",
 "    #  \n",
 "    # TODO - return one of the key values in the dictionary. \n",
+"    # Reminder - you should make sure you return a key - don't assume the numbers will add up to 1\n",
 "    ..."
 ]
 },
@@ -365,6 +379,21 @@
 "bin_loc = sample_bin_variable(check_bins)\n",
 "if check_bins[\"start\"] < bin_loc < check_bins[\"stop\"]:\n",
 "    print(\"bin sampling: return value is in correct range\")"
+]
+},
+{
+"cell_type": "code",
+"execution_count": null,
+"metadata": {
+"tags": []
+},
+"outputs": [],
+"source": [
+"# Check returns center of bin\n",
+"check_return_center = {\"start\": 0.0, \"stop\": 1.0, \"n bins\": 2}\n",
+"bin_loc = sample_bin_variable(check_return_center)\n",
+"if not (np.isclose(bin_loc, 0.25) or np.isclose(bin_loc, 0.75)):\n",
+"    print(f\"If two bins, the first bin goes from 0 to 0.5, the second from 0.5 to 1.0, so return either 0.25 or 0.75 (yours was {bin_loc})\")"
 ]
 },
 {
@@ -761,14 +790,10 @@
 "# TODO - set to correct value               \n",
 "# List of names (creates a set)\n",
 "worked_with_names = {\"not filled out\"}\n",
-"# List of URLS (creates a set)\n",
+"# List of URLS TAF24 (creates a set)\n",
 "websites = {\"not filled out\"}\n",
 "# Approximate number of hours, including lab/in-class time\n",
-"hours = -1.5\n",
-"\n",
-"# for all row, column in all_indices_from_where\n",
-"#.   if this is the column for wrist torque \n",
-"#.      print(f\"Row: {r}, Time step: {c // n_time_steps} Successful y/n: {pick_data[r, -1] == 1}, value: {pick_data[r, c]}\")"
+"hours = -1.5\n"
 ]
 },
 {
@@ -785,36 +810,18 @@
 },
 {
 "cell_type": "markdown",
-"metadata": {
-"deletable": false,
-"editable": false
-},
-"source": [
-"## Submission\n",
-"\n",
-"Make sure you have run all cells in your notebook in order before running the cell below, so that all images/graphs appear in the output. The cell below will generate a zip file for you to submit. **Please save before exporting!**\n",
-"\n",
-"Submit through gradescope, probability sampling"
-]
-},
-{
-"cell_type": "code",
-"execution_count": null,
-"metadata": {
-"deletable": false,
-"editable": false
-},
-"outputs": [],
-"source": [
-"# Save your notebook first, then run this cell to export your submission.\n",
-"grader.export(run_tests=True)"
-]
-},
-{
-"cell_type": "markdown",
 "metadata": {},
 "source": [
-" "
+"### To submit\n",
+"\n",
+"- Do a restart then run all to make sure everything runs ok\n",
+"- Save the file\n",
+"- Submit this .ipynb file through gradescope, Homework 1\n",
+"- Take out/suppress all print statements\n",
+"\n",
+"If the Gradescope autograder fails, please check here first for common reasons for it to fail\n",
+"    https://docs.google.com/presentation/d/1tYa5oycUiG4YhXUq5vHvPOpWJ4k_xUPp2rUNIL7Q9RI/edit?usp=sharing\n",
+"\n"
 ]
 }
 ],
@@ -834,7 +841,7 @@
 "name": "python",
 "nbconvert_exporter": "python",
 "pygments_lexer": "ipython3",
-"version": "3.7.4"
+"version": "3.11.7"
 },
 "otter": {
 "OK_FORMAT": true,
@@ -846,7 +853,7 @@
 {
 "cases": [
 {
-"code": ">>> assert(test_gaussian(b_print=False))\n",
+"code": ">>> assert test_gaussian(b_print=False)\n",
 "hidden": false,
 "locked": false
 }
@@ -865,7 +872,7 @@
 {
 "cases": [
 {
-"code": ">>> assert(test_bins(b_print=False))\n",
+"code": ">>> assert test_bins(b_print=False)\n",
 "hidden": false,
 "locked": false
 }
@@ -884,7 +891,7 @@
 {
 "cases": [
 {
-"code": ">>> assert(test_boolean(0.3, b_print=False))\n",
+"code": ">>> assert test_boolean(0.3, b_print=False)\n",
 "hidden": false,
 "locked": false
 }
@@ -903,7 +910,7 @@
 {
 "cases": [
 {
-"code": ">>> assert(test_discrete(b_print=False))\n",
+"code": ">>> assert test_discrete(b_print=False)\n",
 "hidden": false,
 "locked": false
 }
@@ -922,17 +929,17 @@
 {
 "cases": [
 {
-"code": ">>> assert(not \"not filled out\" in worked_with_names)\n",
+"code": ">>> assert not 'not filled out' in worked_with_names\n",
 "hidden": false,
 "locked": false
 },
 {
-"code": ">>> assert(not \"not filled out\" in websites)\n",
+"code": ">>> assert not 'not filled out' in websites\n",
 "hidden": false,
 "locked": false
 },
 {
-"code": ">>> assert(hours > 0)\n",
+"code": ">>> assert hours > 0\n",
 "hidden": false,
 "locked": false
 }
