Fixing gradescope problems

--- a/RobotHallway/check_bayes_filter.ipynb
+++ b/RobotHallway/check_bayes_filter.ipynb
@@ -27,7 +27,7 @@
 "\n",
 "For each block, go to the corresponding .py file (you can use Jupyter Notebook to edit those files, or whaterver text editor you want) and fill in the missing code. Note that there's some code that you will NOT fill in (yet) - that is for the Kalman/particle filter assignments. \n",
 "\n",
-"Slides for this assignment: https://docs.google.com/presentation/d/1BClQb3jZRV6kE4TME6tfnjLrWVGh-BKZ0SZ8jdTVuc8/edit?usp=sharing"
+"Slides for this assignment:     https://docs.google.com/presentation/d/1BClQb3jZRV6kE4TME6tfnjLrWVGh-BKZ0SZ8jdTVuc8/edit?usp=sharing"
 ]
 },
 {
@@ -260,8 +260,7 @@
 },
 "outputs": [],
 "source": [
-"from bayes_filter import BayesFilter, test_bayes_filter_sensor_update, test_move_one_direction\n",
-"from make_tests import test_bayes_move_update"
+"from bayes_filter import BayesFilter, test_bayes_filter_sensor_update, test_move_one_direction"
 ]
 },
 {
@@ -387,7 +386,7 @@
 "- Do a restart then run all to make sure everything runs ok\n",
 "- Save the file\n",
 "- Submit this .ipynb file and **robot_ground_truth.py**, **robot_sensors.py** and **bayes_filter.py** through gradescope, Homework Bayes filter\n",
-"- You do NOT need to submit  **world_ground_truth.py**\n",
+"- You do NOT need to submit the data files or  **world_ground_truth.py** or **make_tests.py**\n",
 "- Take out/suppress all print statements that you added (that are not part of the tests)\n",
 "\n",
 "If the Gradescope autograder fails, please check here first for common reasons for it to fail\n",
