--- a/RobotHallway/check_particle_filter.ipynb
+++ b/RobotHallway/check_particle_filter.ipynb
@@ -571,7 +571,7 @@
 "- Do a restart then run all to make sure everything runs ok\n",
 "- Save the file\n",
 "- Submit this .ipynb file and **robot_sensors.py** and **robot_ground_truth.py** and **particle_filter.py** through gradescope, Homework Particle filter\n",
-"- You do NOT need to submit the data files - we will supply those\n",
+"- You do NOT need to submit the data files or  **world_ground_truth.py** or **make_tests.py**\n",
 "- Take out/suppress all print statements that are not part of the tests\n",
 "\n",
 "If the Gradescope autograder fails, please check here first for common reasons for it to fail\n",
